# yt_01

./: .gitignore  pyproject.toml  pyrightconfig.json
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: users.py
app/db/: session.py  users_seed.py
app/models/: user.py
app/schemas/: user.py
